# Discord_Cloud_Bot

./: .gitignore  idei.txt  readme.md
Client/: CMakeCache.txt  CMakeLists.txt  Client_MyDiscordDrive  Makefile  client.cpp  cmake_install.cmake  fileTransfer.cpp  fileTransfer.hpp  gui.cpp  gui.hpp  login.cpp  login.hpp
Client/GUI_Objects/: Buttons.cpp  Buttons.hpp  RoundedRectangleShape.cpp  RoundedRectangleShape.hpp  TextBox.cpp  TextBox.hpp  utils.cpp  utils.hpp
Common/: commons.cpp  commons.hpp
Common/DirectoryTree/: DirectoryTree.cpp  DirectoryTree.hpp
Resources/: secrets.config  toAttribute
Server/: CMakeCache.txt  CMakeLists.txt  CMakeSMPTClient.txt  ClientThreads.cpp  ClientThreads.hpp  Makefile  SQL_DB.cpp  SQL_DB.hpp  Server_MyDiscordDrive  botWrapper.cpp  botWrapper.hpp  cmake_install.cmake  compile_commands.json  discord.hpp  fileTransfer.cpp  fileTransfer.hpp  requestHandler.cpp  requestHandler.hpp  server.cpp  sha256.h  utils.cpp  utils.hpp
Server/smtpclientlibrary-build/: Makefile  cmake_install.cmake
Server/smtpclientlibrary-build/cmake/: CMakeUninstall.cmake
Server/smtpclientlibrary-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Server/smtpclientlibrary-download/smtpclientlibrary-prefix/src/smtpclientlibrary-stamp/: smtpclientlibrary-gitinfo.txt
Server/smtpclientlibrary-download/smtpclientlibrary-prefix/tmp/: smtpclientlibrary-gitclone.cmake  smtpclientlibrary-gitupdate.cmake
Testing/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SQL_DB.cpp  SQL_DB.hpp  a.db  a.out  cmake_install.cmake  compile_commands.json  login.sqlite3  main  main.cpp
Testing/smtpclientlibrary-build/: Makefile  cmake_install.cmake
Testing/smtpclientlibrary-build/cmake/: CMakeUninstall.cmake
Testing/smtpclientlibrary-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Testing/smtpclientlibrary-download/smtpclientlibrary-prefix/tmp/: smtpclientlibrary-gitclone.cmake  smtpclientlibrary-gitupdate.cmake
